--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "nedb": "1.8.0",
     "nedb-promise": "2.0.1",
     "node-hue-api": "2.4.2",
-    "node-sass": "4.9.2",
-    "npm-run-all": "4.1.3",
     "page": "1.8.6",
     "popper.js": "1.14.3",
     "request": "2.87.0",
@@ -70,27 +68,14 @@
     "ytpl": "^0.1.12"
   },
   "scripts": {
-    "prebuild": "npm install rimraf bestzip npm-run-all cross-var -g",
-    "build": "npm-run-all --sequential cleanup:* build:modules build:shrinkwrap build:zip",
-    "build:panel": "webpack",
-    "build:css": "npm-run-all --parallel compile:css:*",
-    "build:modules": "npm install",
-    "build:shrinkwrap": "npm shrinkwrap",
-    "build:zip": "cross-var bestzip sogeBot-$npm_package_version.zip npm-shrinkwrap.json config.example.json libs/ locales/ main.js cluster.js public/ LICENSE package.json README.md AUTHORS tools/ bin/ bat/ scss/ dist/",
-    "compile:css:light": "node-sass --output-style expanded --precision 6 scss/themes/light.scss public/dist/css/light.css",
-    "compile:css:dark": "node-sass --output-style expanded --precision 6 scss/themes/dark.scss public/dist/css/dark.css",
+    "build:zip": "make && cross-var bestzip sogeBot-$npm_package_version.zip npm-shrinkwrap.json config.example.json src/bot locales/ main.js cluster.js public/ LICENSE package.json docs/ AUTHORS tools/ bin/ bat/ scss/ dist/",
     "standard": "standard main.js && standard test/* && standard libs/* && standard libs/systems/* && standard libs/overlays/* && standard libs/widgets/*",
     "test": "mocha --recursive --timeout 20000 --exit",
     "test:config:mongodb": "cp config.example.json config.json && sed -i -- 's/nedb/mongodb/g' config.json",
     "test:config:nedb": "cp config.example.json config.json",
-    "start": "node ./tools/migrate && node ./tools/migrate --delete && npm-run-all --parallel build:css copy:dist build:panel && cross-env NODE_ENV=production node ./main || true",
-    "start-no-migration": "npm-run-all --parallel build:css copy:dist && cross-env NODE_ENV=production node ./main || true",
-    "debug": "npm run copy:dist && node --inspect ./main || true",
-    "cleanup": "node ./tools/cleanup.js || true",
-    "cleanup:dist": "rimraf public/dist/bootstrap* public/dist/carousel/* public/dist/gallery/* public/dist/jquery public/dist/lodash public/dist/velocity-animate public/dist/popper.js public/dist/flv.js public/dist/css/dark.css public/dist/css/light.css",
-    "cleanup:modules": "rimraf node_modules/",
-    "cleanup:shrinkwrap": "rimraf npm-shrinkwrap.json",
-    "copy:dist": "node tools/copy-dist-files.js"
+    "start": "node ./tools/migrate && node ./tools/migrate --delete && cross-env NODE_ENV=production node ./main || true",
+    "start-no-migration": "cross-env NODE_ENV=production node ./main || true",
+    "cleanup": "node ./tools/cleanup.js || true"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
@@ -102,9 +87,11 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
+    "bestzip": "1.1.4",
     "browserify": "^16.2.2",
     "chai": "4.1.2",
     "clean-webpack-plugin": "^0.1.19",
+    "cross-var": "1.1.0",
     "css-loader": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
@@ -112,6 +99,7 @@
     "locate-path": "3.0.0",
     "minimist": "^1.2.0",
     "mocha": "5.2.0",
+    "node-sass": "4.9.2",
     "sinon": "6.1.4",
     "standard": "11.0.1",
     "test-until": "1.1.1",
