chore: Update vue-plyr to 4.0.0

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "jquery": "3.3.1",
     "lodash": "4.17.10",
     "mathjs": "5.0.4",
-    "module-alias": "^2.1.0",
+    "module-alias": "2.1.0",
     "moment": "2.22.2",
     "moment-precise-range-plugin": "1.3.0",
     "moment-timezone": "0.5.21",
@@ -44,10 +44,11 @@
     "nedb-promise": "2.0.1",
     "node-hue-api": "2.4.2",
     "page": "1.8.6",
+    "plyr": "3.4.0-beta.2",
     "popper.js": "1.14.3",
     "request": "2.87.0",
     "safe-eval": "0.4.1",
-    "snekfetch": "^4.0.4",
+    "snekfetch": "4.0.4",
     "socket.io": "2.1.1",
     "sortablejs": "1.7.0",
     "spotify-web-api-node": "3.1.1",
@@ -57,15 +58,15 @@
     "twitter": "1.7.1",
     "url-join": "4.0.0",
     "velocity-animate": "1.5.2",
-    "vue": "^2.5.17",
-    "vue-plyr": "^3.0.0",
+    "vue": "2.5.17",
+    "vue-plyr": "4.0.0",
     "winston": "3.0.0",
     "winwheel": "1.0.1",
     "xregexp": "4.2.0",
     "yargs": "12.0.1",
     "youtube-search": "1.1.1",
     "ytdl-core": "0.21.1",
-    "ytpl": "^0.1.12"
+    "ytpl": "0.1.12"
   },
   "scripts": {
     "standard": "standard main.js && standard test/* && standard libs/* && standard libs/systems/* && standard libs/overlays/* && standard libs/widgets/*",
@@ -78,38 +79,38 @@
     "cleanup": "node ./tools/cleanup.js || true"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.2",
-    "@fortawesome/free-brands-svg-icons": "^5.2.0",
-    "@fortawesome/free-regular-svg-icons": "^5.2.0",
-    "@fortawesome/free-solid-svg-icons": "^5.2.0",
-    "@fortawesome/vue-fontawesome": "^0.1.1",
-    "babel-core": "^6.26.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^8.0.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.2",
+    "@fortawesome/free-brands-svg-icons": "5.2.0",
+    "@fortawesome/free-regular-svg-icons": "5.2.0",
+    "@fortawesome/free-solid-svg-icons": "5.2.0",
+    "@fortawesome/vue-fontawesome": "0.1.1",
+    "babel-core": "6.26.3",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babelify": "8.0.0",
     "bestzip": "1.1.4",
-    "browserify": "^16.2.2",
+    "browserify": "16.2.2",
     "chai": "4.1.2",
-    "clean-webpack-plugin": "^0.1.19",
+    "clean-webpack-plugin": "0.1.19",
     "cross-var": "1.1.0",
-    "css-loader": "^1.0.0",
-    "gulp": "^3.9.1",
-    "gulp-browserify": "^0.5.1",
-    "gulp-rename": "^1.4.0",
+    "css-loader": "1.0.0",
+    "gulp": "3.9.1",
+    "gulp-browserify": "0.5.1",
+    "gulp-rename": "1.4.0",
     "locate-path": "3.0.0",
-    "minimist": "^1.2.0",
+    "minimist": "1.2.0",
     "mocha": "5.2.0",
     "node-sass": "4.9.2",
     "sinon": "6.1.4",
     "standard": "11.0.1",
     "test-until": "1.1.1",
-    "tinyify": "^2.4.3",
-    "vue-cli": "^2.9.6",
-    "vue-loader": "^15.2.6",
-    "vue-style-loader": "^4.1.1",
-    "vueify": "^9.4.1",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0"
+    "tinyify": "2.4.3",
+    "vue-cli": "2.9.6",
+    "vue-loader": "15.3.0",
+    "vue-style-loader": "4.1.1",
+    "vueify": "9.4.1",
+    "webpack": "4.16.5",
+    "webpack-cli": "3.1.0"
   },
   "browser": {
     "vue": "vue/dist/vue.common.js"
