--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 before_install:
   - npm install -g mocha standard
 install:
-  - make
+  - make ENV=development
 
 jobs:
   include:
