--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 before_install:
   - npm install -g mocha standard
-install:
-  - make ENV=development
+install: make ENV=development
 
 jobs:
   include:
