--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
     "gridstack": "0.4.0",
     "jquery": "3.3.1",
     "lodash": "4.17.10",
-    "mathjs": "5.0.4",
+    "mathjs": "5.1.0",
     "module-alias": "2.1.0",
     "moment": "2.22.2",
     "moment-precise-range-plugin": "1.3.0",
     "moment-timezone": "0.5.21",
-    "mongodb": "3.1.1",
+    "mongodb": "3.1.3",
     "mongodb-uri": "0.9.7",
     "nedb": "1.8.0",
     "nedb-promise": "2.0.1",
     "node-hue-api": "2.4.2",
     "page": "1.8.6",
-    "plyr": "3.4.0-beta.2",
+    "plyr": "3.4.3",
     "popper.js": "1.14.4",
-    "request": "2.87.0",
+    "request": "2.88.0",
     "safe-eval": "0.4.1",
     "snekfetch": "4.0.4",
     "socket.io": "2.1.1",
@@ -54,7 +54,7 @@
     "spotify-web-api-node": "3.1.1",
     "terminal-kit": "1.26.1",
     "twitch-emoticons": "http://deps.sogehige.tv/twitch-emoticons-2.1.0.tgz",
-    "twitch-js": "2.0.0-beta.10",
+    "twitch-js": "2.0.0-beta.12",
     "twitter": "1.7.1",
     "url-join": "4.0.0",
     "velocity-animate": "1.5.2",
@@ -107,7 +107,7 @@
     "tinyify": "2.4.3",
     "vue-cli": "2.9.6",
     "vue-loader": "15.3.0",
-    "vue-style-loader": "4.1.1",
+    "vue-style-loader": "4.1.2",
     "vueify": "9.4.1",
     "webpack": "4.16.5",
     "webpack-cli": "3.1.0"
