--- a/package.json
+++ b/package.json
@@ -84,19 +84,11 @@
     "@fortawesome/free-regular-svg-icons": "5.2.0",
     "@fortawesome/free-solid-svg-icons": "5.2.0",
     "@fortawesome/vue-fontawesome": "0.1.1",
-    "babel-core": "6.26.3",
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-es2015": "6.24.1",
-    "babelify": "8.0.0",
     "bestzip": "1.1.4",
-    "browserify": "16.2.2",
     "chai": "4.1.2",
     "clean-webpack-plugin": "0.1.19",
     "cross-var": "1.1.0",
     "css-loader": "1.0.0",
-    "gulp": "3.9.1",
-    "gulp-browserify": "0.5.1",
-    "gulp-rename": "1.4.0",
     "locate-path": "3.0.0",
     "minimist": "1.2.0",
     "mocha": "5.2.0",
@@ -104,11 +96,10 @@
     "sinon": "6.1.5",
     "standard": "11.0.1",
     "test-until": "1.1.1",
-    "tinyify": "2.4.3",
     "vue-cli": "2.9.6",
     "vue-loader": "15.3.0",
     "vue-style-loader": "4.1.2",
-    "vueify": "9.4.1",
+    "vue-template-compiler": "2.5.17",
     "webpack": "4.16.5",
     "webpack-cli": "3.1.0"
   },
