--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "clean-webpack-plugin": "0.1.19",
     "cross-var": "1.1.0",
     "css-loader": "1.0.0",
+    "flow-bin": "0.79.1",
+    "flow-typed": "2.5.1",
     "locate-path": "3.0.0",
     "minimist": "1.2.0",
     "mocha": "5.2.0",
