--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "@fortawesome/free-regular-svg-icons": "5.2.0",
     "@fortawesome/free-solid-svg-icons": "5.2.0",
     "@fortawesome/vue-fontawesome": "0.1.1",
+    "babel-cli": "6.26.0",
+    "babel-preset-flow": "6.23.0",
     "bestzip": "1.1.4",
     "chai": "4.1.2",
     "clean-webpack-plugin": "0.1.19",
