--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "main": "main.js",
   "author": "Michal Orlik <sogehige@gmail.com>",
   "license": "MIT",
-  "engines": {
-    "node": ">=7.0"
-  },
   "dependencies": {
-    "async-request": "1.2.0",
     "auto-load": "3.0.0",
     "axios": "0.18.0",
+    "babel-plugin-source-map-support": "2.0.1",
     "basic-auth": "2.0.0",
     "bootstrap": "4.1.3",
     "bootstrap-menu": "1.0.14",
@@ -51,6 +48,7 @@
     "snekfetch": "4.0.4",
     "socket.io": "2.1.1",
     "sortablejs": "1.7.0",
+    "source-map-support": "0.5.9",
     "spotify-web-api-node": "3.1.1",
     "terminal-kit": "1.26.1",
     "twitch-emoticons": "http://deps.sogehige.tv/twitch-emoticons-2.1.0.tgz",
@@ -69,28 +67,42 @@
     "ytpl": "0.1.12"
   },
   "scripts": {
-    "standard": "standard main.js && standard test/* && standard libs/* && standard libs/systems/* && standard libs/overlays/* && standard libs/widgets/*",
-    "test": "mocha --recursive --timeout 20000 --exit",
+    "eslint": "eslint --quiet test/* && eslint --quiet src/bot/* && eslint --quiet src/bot/systems/* && eslint --quiet src/bot/overlays/* && eslint --quiet src/bot/widgets/*",
+    "test": "mocha --recursive --timeout 20000 --exit --require source-map-support/register",
     "test:config:mongodb": "cp config.example.json config.json && sed -i -- 's/nedb/mongodb/g' config.json",
     "test:config:nedb": "cp config.example.json config.json",
-    "start": "node ./tools/migrate && node ./tools/migrate --delete && cross-env NODE_ENV=production node ./main || true",
-    "start-no-migration": "cross-env NODE_ENV=production node ./main || true",
+    "start": "node ./tools/migrate && node ./tools/migrate --delete && cross-env NODE_ENV=production node -r source-map-support/register ./dest/main || true",
+    "start-no-migration": "cross-env NODE_ENV=production node -r source-map-support/register ./dest/main || true",
     "debug": "cross-env NODE_ENV=development node --inspect ./main || true",
     "cleanup": "node ./tools/cleanup.js || true"
   },
   "devDependencies": {
+    "@babel/cli": "7.0.0-rc.3",
+    "@babel/core": "7.0.0-rc.3",
+    "@babel/plugin-proposal-class-properties": "7.0.0-rc.3",
+    "@babel/preset-env": "7.0.0-rc.3",
+    "@babel/preset-flow": "7.0.0-rc.3",
     "@fortawesome/fontawesome-svg-core": "1.2.2",
     "@fortawesome/free-brands-svg-icons": "5.2.0",
     "@fortawesome/free-regular-svg-icons": "5.2.0",
     "@fortawesome/free-solid-svg-icons": "5.2.0",
     "@fortawesome/vue-fontawesome": "0.1.1",
-    "babel-cli": "6.26.0",
-    "babel-preset-flow": "6.23.0",
+    "babel-eslint": "8.2.6",
+    "babel-preset-minify": "0.4.3",
     "bestzip": "1.1.4",
     "chai": "4.1.2",
     "clean-webpack-plugin": "0.1.19",
     "cross-var": "1.1.0",
     "css-loader": "1.0.0",
+    "empty": "0.10.1",
+    "escope": "3.6.0",
+    "eslint": "5.4.0",
+    "eslint-config-standard": "12.0.0-alpha.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-promise": "4.0.0",
+    "eslint-plugin-standard": "3.1.0",
+    "flow": "0.2.3",
     "flow-bin": "0.79.1",
     "flow-typed": "2.5.1",
     "locate-path": "3.0.0",
@@ -98,7 +110,6 @@
     "mocha": "5.2.0",
     "node-sass": "4.9.3",
     "sinon": "6.1.5",
-    "standard": "11.0.1",
     "test-until": "1.1.1",
     "vue-cli": "2.9.6",
     "vue-loader": "15.3.0",
