--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bootstrap-toggle": "2.2.2",
     "chalk": "2.4.1",
     "chart.js": "2.7.2",
-    "compare-versions": "3.3.0",
+    "compare-versions": "3.3.1",
     "cross-env": "5.2.0",
     "currency-symbol-map": "4.0.4",
     "debug": "3.1.0",
@@ -26,20 +26,20 @@
     "figlet": "1.2.0",
     "flat": "4.1.0",
     "flv.js": "1.4.2",
-    "glob": "7.1.2",
+    "glob": "7.1.3",
     "gridstack": "0.4.0",
     "jquery": "3.3.1",
     "lodash": "4.17.10",
-    "mathjs": "5.1.0",
+    "mathjs": "5.1.1",
     "module-alias": "2.1.0",
     "moment": "2.22.2",
     "moment-precise-range-plugin": "1.3.0",
     "moment-timezone": "0.5.21",
-    "mongodb": "3.1.3",
+    "mongodb": "3.1.4",
     "mongodb-uri": "0.9.7",
     "nedb": "1.8.0",
     "nedb-promise": "2.0.1",
-    "node-hue-api": "2.4.2",
+    "node-hue-api": "2.4.3",
     "page": "1.8.6",
     "plyr": "3.4.3",
     "popper.js": "1.14.4",
@@ -50,7 +50,7 @@
     "sortablejs": "1.7.0",
     "source-map-support": "0.5.9",
     "spotify-web-api-node": "3.1.1",
-    "terminal-kit": "1.26.1",
+    "terminal-kit": "1.26.2",
     "twitch-emoticons": "http://deps.sogehige.tv/twitch-emoticons-2.1.0.tgz",
     "twitch-js": "2.0.0-beta.14",
     "twitter": "1.7.1",
@@ -77,19 +77,19 @@
     "cleanup": "node ./tools/cleanup.js || true"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-rc.3",
-    "@babel/core": "7.0.0-rc.3",
-    "@babel/plugin-proposal-class-properties": "7.0.0-rc.3",
-    "@babel/preset-env": "7.0.0-rc.3",
-    "@babel/preset-flow": "7.0.0-rc.3",
-    "@fortawesome/fontawesome-svg-core": "1.2.2",
-    "@fortawesome/free-brands-svg-icons": "5.2.0",
-    "@fortawesome/free-regular-svg-icons": "5.2.0",
-    "@fortawesome/free-solid-svg-icons": "5.2.0",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-flow": "7.0.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.3",
+    "@fortawesome/free-brands-svg-icons": "5.3.0",
+    "@fortawesome/free-regular-svg-icons": "5.3.0",
+    "@fortawesome/free-solid-svg-icons": "5.3.0",
     "@fortawesome/vue-fontawesome": "0.1.1",
-    "babel-eslint": "8.2.6",
+    "babel-eslint": "9.0.0",
     "babel-preset-minify": "0.4.3",
-    "bestzip": "1.1.4",
+    "bestzip": "2.0.0",
     "chai": "4.1.2",
     "clean-webpack-plugin": "0.1.19",
     "cross-var": "1.1.0",
@@ -112,10 +112,10 @@
     "sinon": "6.1.5",
     "test-until": "1.1.1",
     "vue-cli": "2.9.6",
-    "vue-loader": "15.3.0",
+    "vue-loader": "15.4.1",
     "vue-style-loader": "4.1.2",
     "vue-template-compiler": "2.5.17",
-    "webpack": "4.16.5",
+    "webpack": "4.17.1",
     "webpack-cli": "3.1.0"
   },
   "browser": {
