--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "source-map-support": "0.5.9",
     "spotify-web-api-node": "3.1.1",
     "terminal-kit": "1.26.2",
-    "twitch-emoticons": "http://deps.sogehige.tv/twitch-emoticons-2.1.0.tgz",
+    "twitch-emoticons": "http://deps.sogebot.xyz/twitch-emoticons-2.1.0.tgz",
     "twitch-js": "2.0.0-beta.14",
     "twitter": "1.7.1",
     "url-join": "4.0.0",
