--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 before_install:
   - npm install -g mocha
 install: travis_wait make ENV=development
+notifications:
+  email: false
 
 jobs:
   include:
