--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   "scripts": {
     "build": "make bot ui",
     "eslint": "eslint --quiet test src",
-    "test": "mocha --retries 10 --recursive --timeout 20000 --exit --require source-map-support/register | tee tests.log",
+    "test": "mocha --retries 10 --recursive --timeout 20000 --exit --require source-map-support/register",
     "test:config:mongodb": "cp config.example.json config.json && sed -i -- 's/nedb/mongodb/g' config.json",
     "test:config:nedb": "cp config.example.json config.json",
     "migrate": "node ./tools/migrate && node ./tools/migrate --delete",
