--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": [
     ["@babel/preset-env", { "targets": { "node": "current" } }],
     "@babel/preset-flow",
-    "minify"
+    ["minify", { "builtIns": false }]
   ],
   "sourceMaps": "inline",
   "plugins": ["source-map-support", "@babel/plugin-proposal-class-properties"]
