overlay: move to vue implementation
Fixes #1475
PR https://github.com/sogehige/sogeBot/pull/1472

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,13 @@
 {
   "parser": "babel-eslint",
-  "extends": ["standard"],
+  "extends": ["standard", "plugin:flowtype/recommended"],
+  "plugins": ["flowtype"],
   "rules": {
     "standard/no-callback-literal": "off"
+  },
+  "settings": {
+    "flowtype": {
+      "onlyFilesWithFlowAnnotation": true
+    }
   }
 }
