--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "spotify-web-api-node": "4.0.0",
     "stacktrace-parser": "0.1.4",
     "terminal-kit": "1.26.4",
-    "twitch-emoticons": "http://deps.sogebot.xyz/twitch-emoticons-2.1.0.tgz",
     "twitch-js": "2.0.0-beta.19",
     "twitter": "1.7.1",
     "url-join": "4.0.0",
@@ -100,6 +99,7 @@
     "escope": "3.6.0",
     "eslint": "5.8.0",
     "eslint-config-standard": "12.0.0",
+    "eslint-plugin-flowtype": "3.0.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-node": "8.0.0",
     "eslint-plugin-promise": "4.0.1",
@@ -107,6 +107,7 @@
     "flow": "0.2.3",
     "flow-bin": "0.84.0",
     "flow-typed": "2.5.1",
+    "gsap": "2.0.2",
     "locate-path": "3.0.0",
     "minimist": "1.2.0",
     "mocha": "5.2.0",
