--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "safe-eval": "0.4.1",
     "snekfetch": "4.0.4",
     "socket.io": "2.2.0",
+    "socket.io-client": "2.2.0",
     "sortablejs": "1.7.0",
     "source-map-support": "0.5.9",
     "spotify-web-api-node": "4.0.0",
@@ -58,7 +59,6 @@
     "vue": "2.5.17",
     "vue-plyr": "5.0.4",
     "winston": "3.1.0",
-    "winwheel": "1.0.1",
     "xregexp": "4.2.0",
     "yargs": "12.0.5",
     "youtube-search": "1.1.3",
@@ -119,7 +119,8 @@
     "vue-style-loader": "4.1.2",
     "vue-template-compiler": "2.5.17",
     "webpack": "4.26.1",
-    "webpack-cli": "3.1.2"
+    "webpack-cli": "3.1.2",
+    "winwheel": "1.0.1"
   },
   "browser": {
     "vue": "vue/dist/vue.common.js"
